<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!-- Resources that do not require translation -->
    <string name="app_name" translatable="false">Insured</string>
    <string name="navigation_drawer_header_title" translatable="false">Insured</string>

    <!-- Translatable resources -->
    <string name="menu_filter_by_grow_zone" translation_description="The label for the menu item to filter the displayed plants by grow zone.">Filter by grow zone</string>
    <string name="plant_detail_image_content_description" translation_description="Content description for the header / hero image that is show at the top of the plant detail screen.">Image of plant</string>
    <string name="my_garden_title" translation_description="Title for the 'My garden' screen where the user can see the list of plants that have been added to their garden.">My garden</string>
    <string name="plant_list_title" translation_description="Title for the plant list screen where the user can see a list of plants available to add to their garden.">Plant list</string>
    <string name="plant_details_title" translation_description="Title for the plant details screen where the user can see the details for a specific plant.">Plant details</string>
    <string name="navigation_drawer_header_content_description" translation_description="Content description for the image that is shown at the top of the navigation drawer.">Navigation drawer header logo</string>
    <string name="added_plant_to_garden" translation_description="Confirmation text that is shown when a user adds a plant to their graden.">Added plant to garden</string>
    <string name="garden_empty" translation_description="Text that is shown on the 'My Garden' screen when no plants have been added to the user's garden">Your garden is empty</string>
    <string name="planted_date" translation_description="Text with placeholders that indicates when the plant was planted. Example: 'Sunflower planted on May 24, 2018'.">%1$s planted on %2$s</string>
    <string name="menu_item_share_plant" translation_description="The label for the Share menu item">Share</string>
    <string name="share_text_plant" translation_description="The default messaged used when sharing a plant on SNS, etc.">Check out the %s plant in the Android Sunflower app</string>

    <!-- String plurals and their related prefix / suffix strings -->
    <string name="watering_needs_prefix" translation_description="Prefix for the text describing how often a plant should be watered. Used in combination with watering_needs_suffix.">Watering needs:</string>
    <plurals name="watering_needs_suffix">
        <item quantity="one" translation_description="Suffix for the text describing how often a plant should be watered, singular. Used in combination with watering_needs_prefix: 'Watering needs: every day'.">every day</item>
        <item quantity="other" translation_description="Suffix for the text describing how often a plant should be watered, plural. Used in combination with watering_needs_prefix: 'Watering needs: every 8 days'.">every %d days</item>
    </plurals>

    <string name="watering_next_prefix" translation_description="Prefix for the text indicating when the plant should next be watered. Used in combination with watering_next_suffix.">Last watered on %s</string>
    <plurals name="watering_next_suffix">
        <item quantity="one" translation_description="Suffix for the text indicating when the the plant should next be watered, singular. Used in combination with watering_next_prefix: 'Last watered on May 24, 2018 - water tomorrow.'.">water tomorrow.</item>
        <item quantity="other" translation_description="Suffix for the text indicating when the the plant should next be watered, plural. Used in combination with watering_next_prefix: 'Last watered on May 24, 2018 - water in 8 days.'.">water in %d days.</item>
    </plurals>

    <!-- Accessibility -->
    <string name="a11y_plant_item_image" translation_description="Accessibility text for each of the plant images shown in the 'My garden' and 'Plant list' screens.">Picture of plant</string>
    <string name="title_activity_bottom_navigation" translatable="false">BottomNavigationActivity</string>
    <string name="title_home" translatable="false">Policies</string>
    <string name="title_dashboard" translatable="false">Login</string>
    <string name="title_notifications" translatable="false">Claims</string>
    <string name="title_activity_main" translatable="false">Insured</string>
    <string name="hello" translatable="false">Hello</string>
    <string name="item_title" translatable="false">Palais Garnier</string>
    <string name="property_purchase_form_property_value_hint_text" translatable="false">PROPERTY VALUE #_Please provide
        your sum insured</string>
    <string name="property_purchase_form_property_details_hint_text" translatable="false">PROPERTY DETAIL#_Property description,
        address</string>
    <string name="property_purchase_form_fire_and_buglary_basic_hint_text" translatable="false">#FIRE AND BURGLARY BASIC</string>
    <string name="proceed_to_kyc" translatable="false">Proceed To KYC</string>
    <string name="kyc_form_email" translatable="false">Email</string>
    <string name="kyc_form_password" translatable="false">Password</string>
    <string name="kyc_form_first_name" translatable="false">First Name</string>
    <string name="kyc_form_last_name" translatable="false">Last Name</string>
    <string name="kyc_form_telephone" translatable="false">Mobile Number</string>
    <string name="kyc_form_date_of_birth" translatable="false">Date of Birth (DDMMYYYY)</string>
    <string name="kyc_form_gender" translatable="false">Gender</string>
    <string name="kyc_form_gender_female" translatable="false">Female</string>
    <string name="kyc_form_gender_male" translatable="false">Male</string>
    <string name="kyc_form_marital_status" translatable="false">Marital Status</string>
    <string name="kyc_form_occupation" translatable="false">Occupation</string>
    <string name="kyc_form_state" translatable="false">Current State</string>
    <string name="kyc_form_picture" translatable="false">Picture</string>
    <string name="kyc_form_signature" translatable="false">Signature</string>
    <string name="kyc_form_address" translatable="false">Address</string>
    <string name="kyc_form_save_and_continue_button" translatable="false">Save and Continue</string>
    <string name="policy_option" translatable="false">Policy Option</string>
    <string name="cover" translatable="false">Cover</string>
    <string name="premium" translatable="false">Premium</string>

    <string name="kyc_form_occupation_prompt" translatable="false">Choose your occupation</string>
    <string name="proceed_to_payment" translatable="false">Make Payment</string>

    <string-array name="kyc_form_occupation_arrays">
        <item>Choose your occupation</item>
        <item>Architecture</item>
        <item>Transport</item>
        <item>Sales</item>
        <item>Military and Force</item>
        <item>Management</item>
        <item>Law and Legal</item>
        <item>Information Technology</item>
        <item>Hotel and Catering</item>
    </string-array>
</resources>
