<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="225dp"
    android:layout_marginBottom="30dp"
   >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/property_purchase_form_input_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_purchase_form_property_value_hint_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/property_purchase_form_input_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/property_purchase_form_input_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="@string/property_purchase_form_property_details_hint_text"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/property_purchase_form_input_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            />

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/property_purchase_form_input_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:hint="@string/property_purchase_form_fire_and_buglary_basic_hint_text"
        android:focusableInTouchMode="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/property_purchase_form_input_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:focusableInTouchMode="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/property_purchase_form_submit_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/proceed_to_kyc"/>

</LinearLayout>

</ScrollView>