<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="5"
    android:orientation="horizontal"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    tools:context=".QuotationActivity" >

    <TextView
        android:id="@+id/policy_option_name"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/policy_option"
        android:textColor="@color/colorPrimary"
        android:gravity="left"/>

    <TextView
        android:id="@+id/cover_option_type"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/cover"
        android:textColor="@color/colorPrimary"
        android:gravity="left"/>
    <TextView
        android:id="@+id/premium_amount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/premium"
        android:textColor="@color/colorPrimary"
        android:gravity="left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="Personal Information"

        android:gravity="left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="Policy Details"
        android:gravity="left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="My Quotes"
        android:layout_columnWeight="1"
        android:gravity="left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="My Quotes"
        android:layout_columnWeight="1"
        android:gravity="left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="My Quotes"
        android:layout_columnWeight="1"
        android:gravity="left"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceed_to_payment_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:text="@string/proceed_to_payment"/>


</GridLayout>
